fix video layout on mobile

--- a/Encore/stylesheets/style.css
+++ b/Encore/stylesheets/style.css
@@ -430,6 +430,9 @@ blockquote {
   background-position: center;
   color: #ffffff;
 }
+.video-wrapper iframe {
+  min-height: 315px;
+}
 
 /* About Us */
 .about-history-wrapper {
